testsuite/tests/properties/invalid_bind_3/test.lkt
# Test that using an entity incompatible with the owning type is rejected when
# passed as the first argument of a propagate.

import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Literal(@Number)
}

@abstract
class FooNode implements Node[FooNode] {
}

class Other: FooNode {
}

class Literal: FooNode implements TokenNode {
    var: LogicVar

    fun node(): Entity[Literal] = node.as_entity

    fun b(): Equation = node.var <- Literal.node%(node.a())

    fun a(): Entity[Other] =
        raise[Entity[Other]] PropertyError(
            "Property Literal.a not implemented"
        )
}
